Add "close" button to shutdown the server

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -47,6 +47,7 @@
                     <label for="cluster" style="margin-top: 0.5rem">K8s Context:</label>
                     <select id="cluster" class="form-control"></select>
                 </form>
+                <i class="btn fa fa-power-off text-muted" title="Shut down the Helm Dashboard application"></i>
             </div>
         </div>
     </nav>
