--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -58,8 +58,12 @@
         <div class="row mb-3">
 
         </div>
-        <h1><span class="name"></span>,
-            revision <span class="rev"></span></h1>
+        <h1><span class="name"></span>, revision <span class="rev"></span>
+            <span class="float-end">
+                <a id="btnRollback" class="btn btn-sm bg-primary border border-secondary text-light" title="Rollback to this revision"><i class="fa fa-backward"></i> Rollback</a>
+                <a id="btnUninstall" class="btn btn-sm bg-danger border border-secondary text-light" title="Uninstall the chart"><i class="fa fa-trash"></i> Uninstall</a>
+            </span>
+        </h1>
         Chart <b id="chartName"></b>: <i id="revDescr"></i>
 
         <nav class="mt-2">
@@ -121,8 +125,8 @@
 
         </div>
     </div>
-
 </div>
+
 <div class="modal" id="describeModal"
      tabindex="-1" aria-labelledby="describeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog modal-dialog-scrollable modal-xl">
@@ -133,6 +137,24 @@
             </div>
             <div class="modal-body" id="describeModalBody">
 
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="confirmModal"
+     tabindex="-1" aria-labelledby="describeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog modal-dialog-scrollable modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmModalLabel"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="confirmModalBody">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Confirm</button>
             </div>
         </div>
     </div>
