--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -60,7 +60,7 @@
         </div>
         <h1><span class="name"></span>, revision <span class="rev"></span>
             <span class="float-end">
-                <a id="btnRollback" class="btn btn-sm bg-primary border border-secondary text-light" title="Rollback to this revision"><i class="fa fa-backward"></i> Rollback</a>
+                <a id="btnRollback" class="btn btn-sm bg-primary border border-secondary text-light" title="Rollback to this revision"><i class="fa fa-backward"></i> <span>Rollback</span></a>
                 <a id="btnUninstall" class="btn btn-sm bg-danger border border-secondary text-light" title="Uninstall the chart"><i class="fa fa-trash"></i> Uninstall</a>
             </span>
         </h1>
