Workaround the wrap

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -96,13 +96,14 @@
     </div>
 
 
-    <div class="row pt-0 mx-0 me-0" id="sectionDetails" style="display: none">
+    <div class="row pt-0 mx-0 me-0 flex-nowrap" id="sectionDetails" style="display: none">
         <div class="col-2 ms-3 ps-1 pt-4 rev-list">
             <h3 class="fw-bold small">Revisions</h3>
             <ul class="list-unstyled">
             </ul>
         </div>
-        <div class="col ms-2 rev-details bg-white b-shadow pt-4 px-5">
+
+        <div class="col-10 ms-2 rev-details bg-white b-shadow pt-4 px-5 overflow-auto">
             <div><span class="rev-status fw-bold me-3"></span></div>
             <div>
                 <h1 class="name float-start">Name</h1>
