Fix wrapping and scrolls

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
 
-<div class="container-fluid gx-0">
+<div class="container-fluid px-0">
     <!-- TOP BAR -->
-    <nav class="navbar navbar-expand bg-white mb-0 p-0" id="topNav">
+    <nav class="navbar navbar-expand bg-white mb-0 p-0 b-shadow" id="topNav">
         <div class="container-fluid m-0 p-0">
             <div class="navbar-brand">
                 <a href="/"><img src="static/logo.png" alt="Logo"></a>
@@ -53,7 +53,7 @@
     </nav>
     <!-- /TOP BAR -->
 
-    <div class="row mt-3 pt-3 mx-0 me-5" id="sectionList" style="display: none">
+    <div class="row mt-3 pt-3 me-5" id="sectionList" style="display: none">
         <div class="col-2 ms-3">
             <!-- FILTER BLOCK -->
             <div class="p-2 ps-2 bg-white rounded-1 b-shadow" id="filters">
@@ -95,15 +95,14 @@
         <!-- /INSTALLED LIST -->
     </div>
 
-
-    <div class="row pt-0 mx-0 me-0 flex-nowrap" id="sectionDetails" style="display: none">
-        <div class="col-2 ms-3 ps-1 pt-4 rev-list">
+    <div class="row flex-nowrap pt-0 mx-0" id="sectionDetails" style="display: none">
+        <div class="col-2 px-4 py-4 pe-3 rev-list">
             <h3 class="fw-bold small">Revisions</h3>
             <ul class="list-unstyled">
             </ul>
         </div>
 
-        <div class="col-10 ms-2 rev-details bg-white b-shadow pt-4 px-5 overflow-auto">
+        <div class="col-10 rev-details bg-white b-shadow pt-4 px-5 overflow-auto">
             <div><span class="rev-status fw-bold me-3"></span></div>
             <div>
                 <h1 class="name float-start">Name</h1>
