--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -129,10 +129,12 @@
 
             <div>
                 Revision <span class="rev fw-bold me-4"></span>
-                Upgraded on <span class="rev-date"></span>
+                <span class="rev-date"></span>
             </div>
 
             <div class="rev-tags mt-3">
+                <span class="rounded rounded-1 me-2 p-1 px-2 bg-tag text-dark">cluster: <span
+                        class="rev-cluster fw-bold"></span></span>
                 <span class="rounded rounded-1 me-2 p-1 px-2 bg-tag text-dark">namespace: <span
                         class="rev-ns fw-bold"></span></span>
                 <span class="rounded rounded-1 me-2 p-1 px-2 bg-tag text-dark">chart version: <span
@@ -258,7 +260,7 @@
     </div>
 </div>
 
-<footer class="container-fluid small mt-5" style="z-index: -50">
+<footer class="container-fluid small mt-5 mb-5" style="z-index: -50">
     <div class="row align-items-end justify-content-end">
         <div class="col-3"></div>
         <div class="col-4 text-center bg-white bg-opacity-50 p-2 px-3 rounded b-shadow">
