Add version information into UI (#35)
This commit adds the tool version into the UI in the top bar.

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -44,6 +44,9 @@
                 </div>
             </div>
 
+            <div id="toolVersion">
+            </div>
+            
             <div class="separator-vertical mx-3"><span></span></div>
 
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
