Hide upgrade menu item by default

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -70,7 +70,7 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item disabled" href="#">Version <span id="toolVersion"></span></a></li>
-                        <li class="">
+                        <li class="display-none upgrade-possible">
                             <a class="dropdown-item position-relative" href="https://github.com/komodorio/helm-dashboard#installing" target="_blank">
                             <span class="position-absolute top-50 start-0 translate-middle p-1 bg-danger border border-light rounded-circle new-version-pill display-none">
                                 <span class="visually-hidden">New version</span>
