--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -54,7 +54,7 @@
                     <a class="nav-link px-3 section-repo">Repository</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle section-help" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
                         <span class="position-absolute top-50 start-0 translate-middle p-1 bg-danger border border-light rounded-circle new-version-pill display-none">
                             <span class="visually-hidden">New version</span>
