--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -53,12 +53,9 @@
                 <li class="nav-item mx-2">
                     <a class="nav-link px-3 section-repo">Repository</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item mx-2 dropdown">
                     <a class="nav-link dropdown-toggle section-help" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
-                        <span class="position-absolute top-50 start-0 translate-middle p-1 bg-danger border border-light rounded-circle new-version-pill display-none">
-                            <span class="visually-hidden">New version</span>
-                        </span>
                         Help
                     </a>
                     <ul class="dropdown-menu fs-80">
@@ -70,15 +67,12 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item disabled" href="#">Version <span id="toolVersion"></span></a></li>
-                        <li class="display-none upgrade-possible">
-                            <a class="dropdown-item position-relative" href="https://github.com/komodorio/helm-dashboard#installing" target="_blank">
-                            <span class="position-absolute top-50 start-0 translate-middle p-1 bg-danger border border-light rounded-circle new-version-pill display-none">
-                                <span class="visually-hidden">New version</span>
-                            </span>
-                            Upgrade to <span id="toolVersionUpgrade"></span>
-                        </a></li>
                     </ul>
                 </li>
+                <li class="nav-item mx-2 display-none upgrade-possible">
+                    <a class="nav-link position-relative text-danger" href="https://github.com/komodorio/helm-dashboard#installing" target="_blank">
+                        Upgrade to <span id="toolVersionUpgrade"></span>
+                    </a></li>
 
             </ul>
             <div>
